samples/bookmap/invalid/R16.dita
<?xml version="1.0" encoding="UTF-8"?>
<bookmap>
  <booktitle><booklibrary>L</booklibrary><mainbooktitle>T</mainbooktitle></booktitle>
  <bookmeta/>
  <frontmatter/>
  <chapter href="c.dita">
    <topicmeta><navtitle>Chapter Title</navtitle></topicmeta>
    <disallowedchild/>
  </chapter>
</bookmap>